--- a/playbook-lshw.yaml
+++ b/playbook-lshw.yaml
@@ -1,13 +1,18 @@
----
-  - name: List all relevant Hardware & OS
-    hosts: all
-    tasks:
-      - name: Execute the Uptime command over Command module
-        register: lshwoutput
-        command: "lshw -short"
-      - debug:
-          var: lshwoutput.stdout_lines
-      - name: Uname command
-       register: unameout
-       command: "uname -a"
-       - debug: unameout.stdout_lines
+--- 
+- 
+  hosts: all
+  name: "List all relevant Hardware & OS"
+  tasks: 
+    - 
+      command: "lshw -short"
+      name: "Execute the Uptime command over Command module"
+      register: lshwoutput
+    - 
+      debug: 
+        var: lshwoutput.stdout_lines
+    - 
+      command: "uname -a"
+      name: "Uname command"
+      register: unameout
+    - 
+      debug: unameout.stdout_lines
