--- a/playbook-auditlog.yaml
+++ b/playbook-auditlog.yaml
@@ -4,7 +4,7 @@
      - name: Copy file
        copy:
           src: /var/log/audit/audit.log
-          dest: /var/log/selinux/{{inventory_hostname}}.audit.log
+          dest: /var/log/selinux/test.audit.log
           owner: user
           group: user
           mode: 0644
