--- a/test-hwinv.yaml
+++ b/test-hwinv.yaml
@@ -2,11 +2,4 @@
 - hosts: all
   tasks:
     - name: Hardware Inventory
-      shell:
-        cmd: grep 'cpu cores' /proc/cpuinfo
-        cmd: grep 'cpu MHz' /proc/cpuinfo
-        cmd: grep MemTotal /proc/meminfo
-        cmd: grep SwapTotal /proc/meminfo
-        cmd: df -h /
-        cmd: cat /proc/*version
-        cmd: grep -i 'VERSION=' /etc/*release
+      shell: hwinventory.sh >> hwinventory.txt
